tests/ui/higher-ranked/leak-check/project-param-env-candidate-universe-err.projection_bound.stderr
error[E0308]: mismatched types
  --> $DIR/project-param-env-candidate-universe-err.rs:30:5
   |
LL |     projection_bound::<T>()
   |     ^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected associated type `<T as Trait<'static, '_>>::Assoc`
              found associated type `<T as Trait<'a, '_>>::Assoc`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
